# oath

./: .dockerignore  .gitignore  .gitleaks.toml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  install.sh  oath-policy.toml.example
.agents/skills/oath-publish-transfer/: SKILL.md
.agents/skills/oath-safe-package/: SKILL.md
.context/: deep-research.md  state-of-art-analysis.md  viral-plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design-partner.yml  feature_request.yml
.github/workflows/: ci.yml  evidence-site.yml  project-corpus-refresh.yml  qualification-monitor.yml  release.yml
compat-results/benchmarks/: installers.json
compat-results/ga/: summary.json
contracts/: README.md  compatibility-evidence-v1.schema.json  detection-evidence-v2.schema.json  exec-assessment-v3.schema.json  independent-audit-report-v1.schema.json  npm-compatibility-manifest-v1.json  oath-contracts.ts  operational-drill-report-v2.schema.json  performance-evidence-v1.schema.json  performance-evidence-v2.schema.json  production-deployment-evidence-v1.schema.json  publish-assessment-v2.schema.json  qualification-ledger-v1.schema.json  registry-openapi.yaml  registry-replication-event-v1.schema.json  registry-verdict-v1.schema.json  transparency-checkpoint-v3.schema.json
contracts/examples/: exec-assessment-v3.signed.json  publish-assessment-v2.signed.json  registry-verdict-v1.signed.json
contracts/go/: go.mod
contracts/javascript/: oath-contracts.mjs  verify-examples.mjs
contracts/python/: oath_contracts.py  test_examples.py
crates/oath-analyze/: Cargo.toml
crates/oath-analyze/examples/: bench.rs  detection_gate.rs
crates/oath-analyze/src/: analyzer.rs  behavior.rs  lib.rs  patterns.rs  report.rs  scanner.rs  score.rs
crates/oath-analyze/tests/: analysis.rs
crates/oath-cli/: Cargo.toml
crates/oath-cli/src/: approvals.rs  capabilities.rs  evidence.rs  exec_assessment.rs  install_state.rs  install_timing.rs  main.rs  oathx.rs  package_transfer.rs  prompts.rs  publish_assessment.rs
crates/oath-contracts/: Cargo.toml
crates/oath-contracts/examples/: generate_contract_examples.rs
crates/oath-contracts/src/: lib.rs
crates/oath-core/: Cargo.toml
crates/oath-fetch/: Cargo.toml
crates/oath-fetch/src/: cache.rs  client.rs  lib.rs  metadata.rs  npmrc.rs  packument.rs  resolve.rs  tarball.rs
crates/oath-fetch/tests/: integration.rs
crates/oath-index/: Cargo.toml
crates/oath-index/src/: lib.rs
crates/oath-registry/: Cargo.toml
crates/oath-registry/migrations/: 0001_registry.sql  0002_ga_foundation.sql  0003_limits.sql  0004_outbox_leases.sql  0005_tenant_rls.sql
crates/oath-registry/src/: analysis_backend.rs  assessment.rs  billing.rs  control_plane.rs  identity.rs  lib.rs  main.rs  metrics.rs  object_backend.rs  postgres_api.rs  rate_limit.rs  signer.rs
crates/oath-resolve/: Cargo.toml
crates/oath-resolve/src/: arborist-plan.cjs  git.rs  graph.rs  import.rs  lib.rs  lockfile.rs  placement.rs  resolver.rs
crates/oath-resolve/tests/: integration.rs
crates/oath-sandbox/: Cargo.toml
crates/oath-sandbox/src/: executor.rs  lib.rs  linux.rs  macos.rs  policy.rs  windows.rs
crates/oath-sandbox/tests/: sandbox.rs
crates/oath-store/: Cargo.toml
crates/oath-store/src/: cas.rs  layout.rs  lib.rs  linker.rs
crates/oath-transparency/: Cargo.toml
crates/oath-transparency/src/: lib.rs
crates/oath-workspace/: Cargo.toml
crates/ward-analyze/: Cargo.toml
crates/ward-cli/: Cargo.toml
crates/ward-cli/src/: main.rs  wardx.rs
crates/ward-core/: Cargo.toml
crates/ward-fetch/: Cargo.toml
crates/ward-fetch/src/: lib.rs
crates/ward-index/: Cargo.toml
crates/ward-index/src/: lib.rs
crates/ward-registry/: Cargo.toml
crates/ward-registry/src/: main.rs
crates/ward-resolve/: Cargo.toml
crates/ward-sandbox/: Cargo.toml
crates/ward-store/: Cargo.toml
crates/ward-store/src/: lib.rs
deploy/: Dockerfile  compose.yaml
deploy/kubernetes/: README.md
docs/: AI_ECOSYSTEM_COMPATIBILITY.md  BETA_EVIDENCE.md  BUSINESS_BETA_RUNBOOK.md  CORPUS_RUNNERS.md  DATA_RETENTION.md  DESIGN_PARTNER_PROGRAM.md  EXTERNAL_AUDIT_SCOPE.md  GA_EVIDENCE.md  GA_GATE_TRACKER.md  INCIDENT_RESPONSE.md  LEGAL_READINESS.md  NPM_COMPATIBILITY_CONTRACT.md  PACKAGE_LIFECYCLE_POLICY.md  QUALIFICATION_OPERATIONS.md  REGISTRY_OPERATIONS.md  RELEASE_COMPLETE_PLAN.md  RELEASE_READINESS.md  SERVICE_LEVEL_OBJECTIVES.md  SOTA_REPLACEMENT_ROADMAP.md  SUPPORTED_PLATFORMS.md  VISION.md  analysis-evasion-research.md  peer-dependencies-research.md  scanner-threat-model.md  workspace-research.md
docs/adr/: 0001-arborist-placement-planner.md  0002-release-evidence-runners.md
homebrew/: oath.rb
scripts/: aggregate-compatibility-evidence.mjs  aggregate-compatibility-evidence.test.mjs  benchmark-installers.mjs  benchmark-installers.test.mjs  build-audit-bundle.mjs  build-contract-bundle.mjs  compat-ai-ecosystem.sh  compat-behavioral.mjs  compat-command-surface.mjs  compat-registry-fixture.mjs  compat-scale.mjs  generate-behavioral-contract.mjs  generate-ga-evidence.mjs  generate-ga-evidence.test.mjs  launch-check.sh  license-check.mjs  lock-mutation.mjs  monitor-qualification.mjs  npm-parity.mjs  project-corpus.mjs  project-parity.mjs  qualification-ledger.mjs  readme-release-smoke.sh  reliability-drills.sh  run-compat-linux.sh  run-internal-containment-review.mjs  run-operational-drill.mjs  tree-evidence.mjs  tree-evidence.test.mjs  validate-agent-skills.mjs  validate-beta-ledger.mjs
tests/compat/: behavioral-bases.json  behavioral-contract.json  command-surface-contract.json  project-candidate-additions.json  project-candidates.example.json  project-candidates.json  projects.lock.json  projects.lock.schema.json  projects.txt
tests/detection/: corpus-metadata.schema.json
website/: .gitignore  README.md  index.html  oath-lock.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
website/src/: App.tsx  index.css
(+96 files in other folders)
