[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Generalized Labs"]
repository = "https://github.com/generalized-labs/ward"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / integrity
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = "2"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Compression
flate2 = "1"
tar = "0.4"
zstd = "0.13"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# WASM sandbox
wasmtime = "29"
