[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.oath-workspace]
# oath-workspace is included via crates/* glob

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Generalized Labs"]
repository = "https://github.com/generalized-labs/oath"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / integrity
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = "2"

# HTTP -- rustls-tls (not native-tls/OpenSSL) so Linux cross-compiles need no system OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "rustls-tls"] }
axum = { version = "0.8", features = ["macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Semver
node-semver = "2"

# Compression
flate2 = "1"
tar = "0.4"
zstd = "0.13"

# Utils
url = "2"
base64 = "0.22"
tempfile = "3"
futures-util = "0.3"
bytes = "1"
serde_yaml = "0.9"
glob = "0.3"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# WASM sandbox
# wasmtime = "29"  # removed: using OS-level sandbox (macOS Seatbelt / Linux Landlock)
