[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.oath-workspace]
# oath-workspace is included via crates/* glob

[workspace.package]
version = "0.2.5"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["Generalized Labs"]
repository = "https://github.com/Generalized-Labs/oath"

# Smaller release binary; opt-level stays at the release default (3) so install/
# scan throughput is unchanged.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / integrity
sha2 = "0.10"
sha1 = "0.11"
blake3 = "1"
ed25519-dalek = "2"
getrandom = "0.3"
# Pin the upstream quick-xml 0.41 security update until object_store 0.14.1 is
# published. The revision is the minimal upstream dependency-only fix.
object_store = { git = "https://github.com/apache/arrow-rs-object-store", rev = "fd44ebb9c1158660795ec22d7b11acf31c3fe113", features = ["aws", "azure", "gcp"] }
# Keep Cargo.lock on crc-fast 1.7.0 while 1.8.0-1.10.0 depend on yanked
# spin 0.10.0. CI's warning-fatal RustSec audit guards this lock constraint.
# AWS-LC provides the same OIDC verification algorithms without pulling the
# unfixed RustCrypto RSA timing-side-channel dependency.
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
hmac = "0.12"
hex = "0.4"

# HTTP -- rustls-tls (not native-tls/OpenSSL) so Linux cross-compiles need no system OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "rustls-tls"] }
axum = { version = "0.8", features = ["macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Semver
node-semver = "2"

# Compression
flate2 = "1"
tar = "0.4"
zstd = "0.13"

# Utils
url = "2"
base64 = "0.22"
tempfile = "3"
futures-util = "0.3"
bytes = "1"
serde_yaml = "0.9"
glob = "0.3"
libc = "0.2"

# Storage
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["json"] }

# WASM sandbox
# wasmtime = "29"  # removed: using OS-level sandbox (macOS Seatbelt / Linux Landlock)
