[package]
name = "oath-analyze"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oath-core = { path = "../oath-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
oxc = { version = "0.137.0", features = ["oxc_semantic", "ast_visit"] }
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile.workspace = true
