[package]
name = "oath-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oath"
path = "src/main.rs"

[[bin]]
name = "oathx"
path = "src/oathx.rs"

[dependencies]
oath-core = { path = "../oath-core" }
oath-fetch = { path = "../oath-fetch" }
oath-resolve = { path = "../oath-resolve" }
oath-store = { path = "../oath-store" }
oath-analyze = { path = "../oath-analyze" }

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
