[package]
name = "oath-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oath"
path = "src/main.rs"

[[bin]]
name = "oathx"
path = "src/oathx.rs"

[dependencies]
oath-core = { path = "../oath-core" }
oath-fetch = { path = "../oath-fetch" }
oath-workspace = { path = "../oath-workspace" }
reqwest = { version = "0.12", features = ["json"] }
oath-resolve = { path = "../oath-resolve" }
oath-store = { path = "../oath-store" }
oath-analyze = { path = "../oath-analyze" }
oath-transparency = { path = "../oath-transparency" }

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
sha2.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
sha1 = "0.10"
