[package]
name = "oath-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "oath"
path = "src/main.rs"

[dependencies]
oath-core = { path = "../oath-core" }
oath-contracts = { path = "../oath-contracts" }
oath-fetch = { path = "../oath-fetch" }
oath-workspace = { path = "../oath-workspace" }
reqwest.workspace = true
oath-resolve = { path = "../oath-resolve" }
oath-store = { path = "../oath-store" }
oath-analyze = { path = "../oath-analyze" }
oath-transparency = { path = "../oath-transparency" }
oath-sandbox = { path = "../oath-sandbox" }

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
sha2.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
sha1 = "0.11"
rayon = "1"
node-semver.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
