[package]
name = "oath-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oath-core = { path = "../oath-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
node-semver.workspace = true
sha2.workspace = true
base64.workspace = true
futures-util.workspace = true
bytes.workspace = true
url.workspace = true
tempfile.workspace = true
flate2.workspace = true
tar.workspace = true
