[package]
name = "oath-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oath-core = { path = "../oath-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tokio.workspace = true
