[package]
name = "oath-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oath-registry"
path = "src/main.rs"

[dependencies]
oath-core = { path = "../oath-core" }
oath-store = { path = "../oath-store" }
oath-index = { path = "../oath-index" }
oath-analyze = { path = "../oath-analyze" }

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
sha2.workspace = true
base64.workspace = true
node-semver.workspace = true
tempfile.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
object_store.workspace = true
jsonwebtoken.workspace = true
hmac.workspace = true
hex.workspace = true
reqwest.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
