[package]
name = "oath-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oath-core = { path = "../oath-core" }
oath-fetch = { path = "../oath-fetch" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
anyhow.workspace = true
tempfile.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
node-semver.workspace = true
futures = "0.3"
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
