[package]
name = "oath-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oath-core = { path = "../oath-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
libc.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
libseccomp = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Isolation", "Win32_System_Com", "Win32_System_JobObjects", "Win32_System_Threading"] }
