[package]
name = "oath-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oath-core = { path = "../oath-core" }
oath-fetch = { path = "../oath-fetch" }
oath-resolve = { path = "../oath-resolve" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile.workspace = true
