[package]
name = "ward-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ward"
path = "src/main.rs"

[[bin]]
name = "wardx"
path = "src/wardx.rs"

[dependencies]
ward-core = { path = "../ward-core" }
ward-resolve = { path = "../ward-resolve" }
ward-fetch = { path = "../ward-fetch" }
ward-store = { path = "../ward-store" }
ward-sandbox = { path = "../ward-sandbox" }
ward-analyze = { path = "../ward-analyze" }

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
