[package]
name = "ward-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ward-core = { path = "../ward-core" }
ward-store = { path = "../ward-store" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
