[package]
name = "ward-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ward-registry"
path = "src/main.rs"

[dependencies]
ward-core = { path = "../ward-core" }
ward-store = { path = "../ward-store" }
ward-index = { path = "../ward-index" }
ward-analyze = { path = "../ward-analyze" }

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
sha2.workspace = true
