[package]
name = "ward-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ward-core = { path = "../ward-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
blake3.workspace = true
rusqlite.workspace = true
flate2.workspace = true
tar.workspace = true
zstd.workspace = true
